@@ -38,6 +38,10 @@ class Minitest::Test
     RUBY_ENGINE == 'jruby' && windows? && (JRUBY_VERSION.start_with? '9.1.')
   end
 
+  def jruby_9_1_windows?
+    Minitest::Test.jruby_9_1_windows?
+  end
+
   def self.windows?
     /mswin|msys|mingw/.match? RbConfig::CONFIG['host_os']
   end
@@ -345,7 +349,8 @@ class Minitest::Test
     kw_args = Hash === args[-1] ? args.pop : {}
     env = kw_args[:env]
     (env ||= {})['RUBYOPT'] = nil unless kw_args[:use_bundler]
-    opts = { err: [:child, :out] }
+    # JRuby 9.1 on Windows doesn't support popen options; therefore, test cannot capture / assert on stderr
+    opts = jruby_9_1_windows? ? {} : { err: [:child, :out] }
     if env
       # NOTE while JRuby 9.2.10.0 implements support for unsetenv_others, it doesn't work in child
       #if jruby? && (Gem::Version.new JRUBY_VERSION) < (Gem::Version.new '9.2.10.0')
